# scheduler-worker

./: .gitignore  CMakeLists.txt  Gemfile  LICENSE  Procfile  README  Rakefile  cleaner.rb  database.rb  executor.rb  manager.rb  reporter.rb  resource.rb  scheduler-worker.adoc  schedy-manager.rb  schedy-task.rb  schedy-transition.rb  statistics.rb  task.rb
db/: schema.rb
db/migrate/: 20160411130220_initial_schema.rb  20170201161608_add_more_pids_to_tasks.rb  20170202161609_add_directory_to_tasks.rb  20170426171909_add_children_ids_to_resources.rb  20170811171909_add_estimated_release_time_to_resources.rb
deploy/: database.rb  scheduler-worker-cleaner-oneshot.service  scheduler-worker-init.sh  scheduler-worker-manager.service  scheduler-worker-reporter.service
docker/: Dockerfile  scheduler-worker-cleaner.service  scheduler-worker-executor.service  scheduler-worker-reporter.service
spec/: manager_spec.rb  spec_helper.rb
spec/project/resources/: device.rb  multiplexer.rb
